--- a/src/index.template.html
+++ b/src/index.template.html
@@ -15,18 +15,6 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="128x128"
-      href="icons/favicon-128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="icons/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
       sizes="32x32"
       href="icons/favicon-32x32.png"
     />
@@ -36,7 +24,37 @@
       sizes="16x16"
       href="icons/favicon-16x16.png"
     />
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="128x128"
+      href="icons/icon-128x128.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="icons/favicon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="256x256"
+      href="icons/favicon-256x256.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="384x384"
+      href="icons/favicon-384x384.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="384x384"
+      href="icons/favicon-512x512.png"
+    />
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
